// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashHeader test  Should render navlink witthout active indicator 1`] = `
<li
  className=""
>
  <a
    className="py-2 mb-1 pl-4 pr-5 transition-all group-hover:transition-all hover:bg-black hover:bg-opacity-10 dark:hover:bg-opacity-30 flex flex-row gap-4 "
    href="/main"
    onClick={[Function]}
  >
    <div />
    <span
      className="text-base "
    >
      main
    </span>
  </a>
</li>
`;

exports[`DashHeader test  Should render the sidebar with setings as active 1`] = `
<div
  className="block lg:block page-sideNav fixed lg:static top-16 bottom-0 font-serif"
>
  <div
    className=" overflow-auto flex-col h-[100%] pt-2 bg-indigo-100 dark:bg-dark-bg shadow-lg lg:shadow-none dark:shadow-border-dark"
  >
    <div
      className="list-none"
    >
      <li
        className=""
      >
        <a
          aria-current="page"
          className="py-2 mb-1 pl-4 pr-5 transition-all group-hover:transition-all hover:bg-black hover:bg-opacity-10 dark:hover:bg-opacity-30 flex flex-row gap-4 font-bold text-primary"
          href="/dashboard"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="w-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2 10a8 8 0 018-8v8h8a8 8 0 11-16 0z"
            />
            <path
              d="M12 2.252A8.014 8.014 0 0117.748 8H12V2.252z"
            />
          </svg>
          <span
            className="text-base "
          >
            Dashboard
          </span>
        </a>
      </li>
      <li
        className=""
      >
        <a
          className="py-2 mb-1 pl-4 pr-5 transition-all group-hover:transition-all hover:bg-black hover:bg-opacity-10 dark:hover:bg-opacity-30 flex flex-row gap-4 "
          href="/tickets"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="w-5 "
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z"
            />
            <path
              d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z"
            />
          </svg>
          <span
            className="text-base "
          >
            Tickets
          </span>
        </a>
      </li>
      <li
        className=""
      >
        <a
          className="py-2 mb-1 pl-4 pr-5 transition-all group-hover:transition-all hover:bg-black hover:bg-opacity-10 dark:hover:bg-opacity-30 flex flex-row gap-4 "
          href="/calendar"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="w-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M6 2a1 1 0 00-1 1v1H4a2 2 0 00-2 2v10a2 2 0 002 2h12a2 2 0 002-2V6a2 2 0 00-2-2h-1V3a1 1 0 10-2 0v1H7V3a1 1 0 00-1-1zm0 5a1 1 0 000 2h8a1 1 0 100-2H6z"
              fillRule="evenodd"
            />
          </svg>
          <span
            className="text-base "
          >
            Calendar
          </span>
        </a>
      </li>
      <li
        className=""
      >
        <a
          className="py-2 mb-1 pl-4 pr-5 transition-all group-hover:transition-all hover:bg-black hover:bg-opacity-10 dark:hover:bg-opacity-30 flex flex-row gap-4 "
          href="/support"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="w-5"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M18 10a8 8 0 11-16 0 8 8 0 0116 0zm-2 0c0 .993-.241 1.929-.668 2.754l-1.524-1.525a3.997 3.997 0 00.078-2.183l1.562-1.562C15.802 8.249 16 9.1 16 10zm-5.165 3.913l1.58 1.58A5.98 5.98 0 0110 16a5.976 5.976 0 01-2.516-.552l1.562-1.562a4.006 4.006 0 001.789.027zm-4.677-2.796a4.002 4.002 0 01-.041-2.08l-.08.08-1.53-1.533A5.98 5.98 0 004 10c0 .954.223 1.856.619 2.657l1.54-1.54zm1.088-6.45A5.974 5.974 0 0110 4c.954 0 1.856.223 2.657.619l-1.54 1.54a4.002 4.002 0 00-2.346.033L7.246 4.668zM12 10a2 2 0 11-4 0 2 2 0 014 0z"
              fillRule="evenodd"
            />
          </svg>
          <span
            className="text-base "
          >
            Help
          </span>
        </a>
      </li>
      <li
        className=""
      >
        <a
          aria-current="page"
          className="py-2 mb-1 pl-4 pr-5 transition-all group-hover:transition-all hover:bg-black hover:bg-opacity-10 dark:hover:bg-opacity-30 flex flex-row gap-4 font-bold text-primary"
          href="/dashboard/settings#link"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="w-5 text-red-700 dark:text-red-600 hover:text-red-900"
            fill="currentColor"
            viewBox="0 0 20 20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              clipRule="evenodd"
              d="M3 3a1 1 0 00-1 1v12a1 1 0 102 0V4a1 1 0 00-1-1zm10.293 9.293a1 1 0 001.414 1.414l3-3a1 1 0 000-1.414l-3-3a1 1 0 10-1.414 1.414L14.586 9H7a1 1 0 100 2h7.586l-1.293 1.293z"
              fillRule="evenodd"
            />
          </svg>
          <span
            className="text-base text-red-700 dark:text-red-600 hover:text-red-900 "
          >
            Logout
          </span>
        </a>
      </li>
    </div>
  </div>
</div>
`;

exports[`DashHeader test  Should render with an active style 1`] = `
<li
  className=""
>
  <a
    aria-current="page"
    className="py-2 mb-1 pl-4 pr-5 transition-all group-hover:transition-all hover:bg-black hover:bg-opacity-10 dark:hover:bg-opacity-30 flex flex-row gap-4 font-bold text-primary"
    href="/main"
    onClick={[Function]}
  >
    <div />
    <span
      className="text-base "
    >
      main
    </span>
  </a>
</li>
`;
